@@ -161,6 +161,11 @@ class DatabaseInterface(object):
             return
         raise NotImplementedError
 
+    def sequence_nextvals(self, connection, name, n):
+        if not self.has_sequence():
+            return
+        raise NotImplementedError
+
     def sequence_next_number(self, connection, name):
         if not self.has_sequence():
             return
